# taxes

./: Pipfile  README.md  pyproject.toml  requirements-minimal.txt  requirements.txt
src/taxes/: basic.py
taxes/: basic.py
